google and Github logins have been set up